# modstack

./: .gitignore  pyproject.toml
libs/ai/torch/: pyproject.toml
libs/integrations/anthropic/: pyproject.toml
libs/integrations/boilerpy3/: pyproject.toml
libs/integrations/boilerpy3/modstack_boilerpy3/: __init__.py  commands.py  contracts.py  module.py
libs/integrations/chroma/: pyproject.toml
libs/integrations/cohere/: pyproject.toml
libs/integrations/cohere/modstack_cohere/: typing.py  utils.py
libs/integrations/fastembed/: pyproject.toml
libs/integrations/fireworks/: pyproject.toml
libs/integrations/hf-hub/: pyproject.toml
libs/integrations/hf-hub/modstack_hf_hub/: __init__.py  utils.py
libs/integrations/langdetect/: pyproject.toml
libs/integrations/langdetect/modstack_langdetect/: classifier.py  router.py
libs/integrations/llamacpp/: pyproject.toml
libs/integrations/ollama/: pyproject.toml
libs/integrations/ollama/modstack_ollama/: __init__.py  generator.py
libs/integrations/openai/: pyproject.toml
libs/integrations/pypdf/: pyproject.toml
libs/integrations/pypdf/modstack_pypdf/: __init__.py  commands.py  contracts.py  converter.py  module.py  protocols.py
libs/integrations/redis/: pyproject.toml
libs/integrations/tika/: pyproject.toml
libs/integrations/tika/modstack_tika/: __init__.py  commands.py  contracts.py  module.py
libs/integrations/transformers/: pyproject.toml
libs/integrations/transformers/modstack_transformers/: utils.py
libs/loaders/markdown/: pyproject.toml
libs/loaders/web/: pyproject.toml
libs/modflow/: pyproject.toml
libs/modflow/modflow/: __init__.py  constants.py  errors.py  typing.py
libs/modflow/modflow/channels/: __init__.py  base.py  binary_op.py  context.py  dynamic_barrier.py  dynamic_barrier_value.py  ephemeral.py  last_value.py  manager.py  named_barrier.py  topic.py
libs/modflow/modflow/checkpoints/: __init__.py  base.py  memory.py  sqlite.py
libs/modflow/modflow/contracts/: __init__.py  contracts.py  flows.py
libs/modflow/modflow/flows/: __init__.py  base.py  node.py
libs/modflow/modflow/managed/: __init__.py  base.py  few_shot.py  is_last_step.py
libs/modflow/modflow/modules/: __init__.py  node.py  read.py  write.py
libs/modflow/modflow/serde/: __init__.py  base.py
libs/modflow/modflow/typing/: contracts.py
libs/modflow/modflow/utils/: channel_helper.py  checkpoints.py  debug.py  io.py  validation.py
libs/stores/neo4j/: pyproject.toml
modstack/: pyproject.toml
modstack/modstack/: constants.py  version.py
modstack/modstack/ai/: __init__.py  classification.py  llm.py  models.py  typing.py  utils.py
modstack/modstack/ai/prompts/: default.py
modstack/modstack/artifacts/: __init__.py  artifact.py  base.py  blob.py  byte_stream.py  forms.py  link.py  text.py
modstack/modstack/artifacts/layout/: __init__.py  element.py
modstack/modstack/artifacts/messages/: __init__.py  ai.py  assistant.py  base.py  chat.py  function.py  human.py  system.py  tool.py  user.py
modstack/modstack/artifacts/text/: __init__.py  base.py  email.py
modstack/modstack/auth/: __init__.py  secrets.py
modstack/modstack/commands/: __init__.py  base.py  builders.py  classification.py  converters.py  embedders.py  fetchers.py  flows.py  generators.py  joiners.py  llms.py  preprocessors.py  rankers.py  routers.py  utils.py  websearch.py
modstack/modstack/config/: __init__.py  secrets.py  settings.py
modstack/modstack/containers/: __init__.py  effect.py  feature.py  plugin.py
modstack/modstack/contracts/: __init__.py  agents.py  base.py  builders.py  classification.py  converters.py  embedders.py  fetchers.py  flows.py  generators.py  joiners.py  llms.py  preprocessors.py  rankers.py  routers.py  tools.py  utils.py  websearch.py
modstack/modstack/core/: __init__.py  base.py  command.py  decorator.py  executor.py  functional.py  module.py  parallel.py  passthrough.py  sequential.py  serializable.py  structure.py  utils.py
modstack/modstack/core/artifacts/: __init__.py  blob.py  byte_stream.py  link.py  text.py
modstack/modstack/core/auth/: secrets.py
modstack/modstack/core/exceptions/: flows.py
modstack/modstack/core/fault_handling/: fallbacks.py  retry.py
modstack/modstack/core/modules/: __init__.py  base.py  decorator.py  functional.py  parallel.py  passthrough.py  sequential.py  utils.py
modstack/modstack/core/stores/: artifact_store.py
modstack/modstack/core/tracing/: base.py
modstack/modstack/core/typing/: __init__.py  artifact.py  blob.py  byte_stream.py  effect.py  link.py  text.py  types.py
modstack/modstack/data/: __init__.py
modstack/modstack/endpoints/: __init__.py  endpoint.py  utils.py
modstack/modstack/engines/: __init__.py  base.py  engine.py  errors.py
modstack/modstack/exceptions/: __init__.py  serialization.py
modstack/modstack/flows/: __init__.py  constants.py  typing.py
modstack/modstack/graphs/: __init__.py  base.py
modstack/modstack/index_structs/: __init__.py  base.py
modstack/modstack/indices/: base.py  list.py
modstack/modstack/ingest/: __init__.py  types.py
modstack/modstack/modules/: __init__.py  base.py  decorator.py  executor.py  functional.py  jinja_mapper.py  link_content_fetcher.py  models.py  parallel.py  passthrough.py  sequential.py  text_converter.py  traits.py  utils.py
modstack/modstack/runner/: runner.py
modstack/modstack/settings/: settings.py
modstack/modstack/stores/: __init__.py  artifact_store.py  persist.py
modstack/modstack/tools/: __init__.py  base.py  typing.py
modstack/modstack/tracing/: __init__.py  base.py
modstack/modstack/typing/: __init__.py  addable_dict.py  ai.py  artifact.py  blob.py  byte_stream.py  chat_message.py  coordinates.py  dicts.py  effect.py  filtering.py  link.py  models.py  modules.py  protocols.py  reference.py  registry.py  text.py  tools.py  types.py  vars.py
modstack/modstack/utils/: constants.py  coroutines.py  device.py  dicts.py  display.py  func.py  globals_helper.py  json.py  merge.py  paths.py  reflection.py  regex.py  serialization.py  string.py  threading.py
(+434 files in other folders)
