[tool.poetry]
name = "modstack-monorepo"
version = "0.1.0"
description = ""
authors = ["bengabay <ben@netop.cloud>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.group.dev.dependencies]
modstack = { path = "modstack/", develop = true }
modflow = { path = "libs/modflow/", develop = true }
modstack-markdown = { path = "libs/integrations/markdown/", develop = true }
modstack-boilerpy3 = { path = "libs/integrations/boilerpy3/", develop = true }
modstack-pypdf = { path = "libs/integrations/pypdf/", develop = true }
modstack-pdfminer = { path = "libs/integrations/pdfminer/", develop = true }
modstack-tika = { path = "libs/integrations/tika/", develop = true }
modstack-serper = { path = "libs/integrations/serper/", develop = true }
modstack-langdetect = { path = "libs/integrations/langdetect/", develop = true }
#modstack-fastembed = { path = "libs/integrations/fastembed/", develop = true }
#modstack-openai = { path = "libs/integrations/openai/", develop = true }
#modstack-cohere = { path = "libs/integrations/cohere/", develop = true }
#modstack-anthropic = { path = "libs/integrations/anthropic/", develop = true }
#modstack-ollama = { path = "libs/integrations/ollama/", develop = true }
#modstack-transformers = { path = "libs/integrations/transformers", develop = true }
jupyter = "^1.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-profiling = "*"