[tool.poetry]
name = "modstack-monorepo"
version = "0.1.0"
description = ""
authors = ["bengabay <ben@netop.cloud>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.group.dev.dependencies]
modstack = { path = "modstack/", develop = true }
jupyter = "^1.0.0"

modstack-reddit = { path = "libs/loaders/reddit/", develop = true }

modstack-redis = { path = "libs/stores/redis/", develop = true }
modstack-chroma = { path = "libs/stores/chroma/", develop = true }
modstack-neo4j = { path = "libs/stores/neo4j/", develop = true }

modstack-ollama = { path = "libs/ai/ollama/", develop = true }
#modstack-llamacpp = { path = "libs/ai/llamacpp/", develop = true }
#modstack-transformers = { path = "libs/ai/transformers/", develop = true }
#modstack-cohere = { path = "libs/ai/llamacpp/", develop = true }
#modstack-anthropic = { path = "libs/ai/anthropic/", develop = true }
#modstack-fireworks = { path = "libs/ai/fireworks/", develop = true }

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-profiling = "*"