[tool.poetry]
name = "modstack"
version = "0.1.0"
description = ""
authors = ["bengabay <ben@netop.cloud>"]
packages = [{ include = "modstack/" }]

[tool.poetry.dependencies]
python = "^3.12"
more-itertools = "^10.2.0"
jinja2 = "^3.1.4"
dataclasses-json = "^0.6.6"
pydantic = "^2.7.1"
docarray = { version = "^0.40.0", extras = ['proto'] }
pandas = "^2.2.2"
tenacity = "^8.3.0"
unsync = "^1.4.0"
uuid6 = "^2024.1.12"
chardet = "^5.2.0"
pyparsing = "^3.1.2"
aiosqlite = "^0.20.0"
nltk = { version = "^3.8.1" }
rake-nltk = { version = "^1.0.6" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
