[tool.poetry]
name = "modflow"
version = "0.1.0"
description = ""
authors = ["bengabay <ben@netop.cloud>"]
packages = [{ include = "modflow" }]

[tool.poetry.dependencies]
python = "^3.12"
modstack = { path = "../../modstack/" }
networkx = "^3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
