[tool.poetry]
name = "modstack-fireworks"
version = "0.1.0"
description = ""
authors = ["bengabay <ben@netop.cloud>"]


[tool.poetry.dependencies]
python = "^3.12"
modstack = { path = "../../../modstack/" }
fireworks-ai = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
