[tool.poetry]
name = "modstack-llamacpp"
version = "0.1.0"
description = ""
authors = ["bengabay <ben@netop.cloud>"]
packages = [{ include = "modstack/" }]

[tool.poetry.dependencies]
python = "^3.12"
modstack = { path = "../../../modstack/" }
llama-cpp-python = "^0.2.76"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
