[tool.poetry]
name = "modstack-ollama"
version = "0.1.0"
description = ""
authors = ["bengabay <ben@netop.cloud>"]
packages = [{ include = "modstack_ollama" }]

[tool.poetry.dependencies]
python = "^3.12"
modstack = { path = "../../../modstack/" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
