[tool.poetry]
name = "modstack-openai"
version = "0.1.0"
description = ""
authors = ["bengabay <ben@netop.cloud>"]
packages = [{ include = "modstack/" }]

[tool.poetry.dependencies]
python = "^3.12"
modstack = { path = "../../../modstack/" }
openai = "^1.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
