[tool.poetry]
name = "modstack-transformers"
version = "0.1.0"
description = ""
authors = ["bengabay <ben@netop.cloud>"]
packages = [{ include = "modstack_transformers" }]

[tool.poetry.dependencies]
python = "^3.12"
modstack = { path = "../../../modstack/" }
modstack-hf-hub = { path = "../hf-hub/" }
transformers = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
