[tool.poetry]
name = "modstack-markdown"
version = "0.1.0"
description = ""
authors = ["bengabay <ben@netop.cloud>"]
packages = [{ include = "modstack/" }]

[tool.poetry.dependencies]
python = "^3.12"
modstack = { path = "../../../modstack/" }
markdown-it-py = "^3.0.0"
mdit-plain = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
