[tool.poetry]
name = "modstack-neo4j"
version = "0.1.0"
description = ""
authors = ["bengabay <ben@netop.cloud>"]
packages = [{ include = "modstack/" }]

[tool.poetry.dependencies]
python = "^3.12"
modstack = { path = '../../../modstack/' }
neo4j = "^5.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
